fix hero section padding on mobile

--- a/sass/sections/_hero.scss
+++ b/sass/sections/_hero.scss
@@ -17,7 +17,7 @@
     padding: 5rem 10rem;
 
     @include respond(mobile) {
-      padding: 0;
+      padding: 5rem 0;
     }
   }
 }
